# ecossistema-monorepo

./: .gitignore  .gitleaks.toml  .npmrc  .prettierignore  CLAUDE.md  MEMORY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bdgd-load-hd.yml  bdgd-sync.yml  ci.yml  cross-app-check.yml  deploy-edge-functions.yml  deploy-packages.yml  deploy-railway.yml  e2e.yml  migration-check.yml  security-scan.yml
.husky/: pre-commit  pre-push
apps/erp-educacional/: .env.example  .gitignore  AGENTE_IMPORTACAO_DIPLOMAS.md  ANALYSIS_LEGACY_SIGNATURES.md  AUDIT-FILES-REFERENCE.md  AUDIT-REPORT-2024-05-15.html  AUDIT-REPORT-2024-05-15.md  BRIEFING-DIPLOMA-DIGITAL-FIC.md  CADEIA-CUSTODIA-DIAGRAM.md  CADEIA-CUSTODIA-GUIDE.md  CADEIA-CUSTODIA-IMPLEMENTATION.md  CADEIA-CUSTODIA-INDEX.md  CADEIA-CUSTODIA-QUICK-REF.md  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  PARITY.md  (+49 more)
apps/memory-consolidator/: .coverage  Dockerfile  README.md  pyproject.toml  railway.json
apps/memory-consolidator/src/consolidator/: config.py  main.py
apps/memory-consolidator/src/consolidator/clients/: litellm.py  memory.py  observability.py
apps/memory-consolidator/src/consolidator/jobs/: daily_briefing.py  decay_importance.py  dedupe_semantic.py  detect_procedures.py  extract_facts.py
apps/memory-consolidator/src/consolidator/llm/: classifier.py  extractor.py  summarizer.py
apps/memory-consolidator/src/consolidator/utils/: batch.py  scheduler.py
apps/memory-consolidator/tests/: conftest.py  test_decay.py  test_dedupe.py  test_detect_procedures.py  test_e2e.py  test_extract_facts.py  test_llm_helpers.py  test_main.py
apps/orchestrator/: Dockerfile  README.md  claudinho_orchestrator.py  hooks_bridge.mjs  package.json  pyproject.toml  railway.json
apps/orchestrator/config/: agents.yaml
apps/orchestrator/prompts/: 00-CLAUDINHO.md  01-CFO-IA.md  02-CAO-IA.md  03-CTO-IA.md  04-CMO-IA.md  05-CSO-IA.md  06-CLO-IA.md  07-COO-IA.md
apps/orchestrator/src/: compose-agent.ts
apps/orchestrator/src/orchestrator/: __init__.py  config.py  main.py
apps/orchestrator/src/orchestrator/agents/: __init__.py  factory.py  registry.py  runtime.py
apps/orchestrator/src/orchestrator/clients/: __init__.py  credentials.py  langfuse.py  litellm.py  memory.py
apps/orchestrator/src/orchestrator/hooks/: __init__.py  loader.py
apps/orchestrator/src/orchestrator/prompt/: __init__.py  assembler.py
apps/orchestrator/src/orchestrator/routes/: __init__.py  agents.py  health.py  sessions.py  voice.py  webhooks.py
apps/orchestrator/src/orchestrator/security/: __init__.py  auth.py  wrapping.py
apps/orchestrator/src/orchestrator/services/: approval_service.py  voice_service.py  whatsapp_service.py
apps/orchestrator/tests/: __init__.py  test_agents.py  test_hitl.py  test_resume.py  test_sse.py  test_whatsapp_webhook.py
docs/: CENTRAL-MEMORY.md  COMPACTION-PROTOCOL.md  GIT-WORKFLOW-AUTONOMO.md  INVENTARIO-FERRAMENTAS.md  MAPEAMENTO-V8.2-PARA-MANAGED-AGENTS.md  ONBOARDING-KIT.md  PROTOCOLO-MEMORIA.md  ecossistema-repo-CLAUDE.md  rag-agentes-erp.md
scripts/: smoke-test-efs.sh
(+3921 files in other folders)
