[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-consolidator"
version = "0.1.0"
description = "Memory Consolidator Worker — sleeptime agent pattern (V9 §31)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "langfuse>=2.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consolidator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
